--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,20 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+  <!-- Mobile Menu Toggle -->
+  <div class="mobile-menu-toggle">
+    <button id="menu-toggle"><i class="fas fa-bars"></i></button>
+  </div>
+
   <div class="app-container">
     <!-- Sidebar -->
     <aside>
-      <div class="logo">
-        <div class="logo-icon">M</div>
-        <div class="logo-text">Munger AI</div>
+      <div class="sidebar-header">
+        <div class="logo">
+          <div class="logo-icon">M</div>
+          <div class="logo-text">Munger AI</div>
+        </div>
+        <button class="close-sidebar-btn"><i class="fas fa-times"></i></button>
       </div>
       
       <!-- Navigation -->
@@ -32,7 +40,7 @@
           <h4>Quick Tips</h4>
           <ul>
             <li>Enter item &amp; cost</li>
-            <li>Upload a photo for AI analysis</li>
+            <li>Optional: Upload a photo for AI analysis</li>
             <li>Score &gt;= 5 = buy</li>
           </ul>
         </div>
@@ -89,13 +97,14 @@
             </div>
           </div>
 
-          <!-- IMAGE UPLOAD added to basic form -->
+          <!-- IMAGE UPLOAD - now optional -->
           <div class="form-group">
-            <label for="basic-item-image">Image of the Item</label>
+            <label for="basic-item-image">Image of the Item (Optional)</label>
             <input 
               type="file" 
               id="basic-item-image" 
               accept="image/*"
+              data-optional="true"
             />
             <div class="input-tip">Upload a photo and let our AI analyze your item</div>
           </div>
