--- a/src/profile.html
+++ b/src/profile.html
@@ -12,12 +12,20 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+  <!-- Mobile Menu Toggle -->
+  <div class="mobile-menu-toggle">
+    <button id="menu-toggle"><i class="fas fa-bars"></i></button>
+  </div>
+
   <div class="app-container">
     <!-- Sidebar -->
     <aside>
-      <div class="logo">
-        <div class="logo-icon">M</div>
-        <div class="logo-text">Munger AI</div>
+      <div class="sidebar-header">
+        <div class="logo">
+          <div class="logo-icon">M</div>
+          <div class="logo-text">Munger AI</div>
+        </div>
+        <button class="close-sidebar-btn"><i class="fas fa-times"></i></button>
       </div>
       
       <!-- Navigation -->
