--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           <ul>
             <li>Enter item &amp; cost</li>
             <li>Upload a photo for AI analysis</li>
-            <li>See final decision: "Strong Buy" or "Don't Buy"</li>
+            <li>See final decision: "Buy" or "Don't Buy"</li>
           </ul>
         </div>
         <hr />
