--- a/src/profile.html
+++ b/src/profile.html
@@ -140,14 +140,14 @@
               <div class="form-group">
                 <label for="high-interest-debt">High Interest Debt ($)</label>
                 <input type="number" id="high-interest-debt" name="highInterestDebt" min="0" step="0.01" placeholder="0.00" />
-                <div class="input-tip">Credit cards, personal loans, etc. (>10% interest)</div>
+                <div class="input-tip">Credit cards, personal loans, etc. (&gt;10% interest)</div>
               </div>
             </div>
             <div class="form-col">
               <div class="form-group">
                 <label for="low-interest-debt">Low Interest Debt ($)</label>
                 <input type="number" id="low-interest-debt" name="lowInterestDebt" min="0" step="0.01" placeholder="0.00" />
-                <div class="input-tip">Mortgages, student loans, etc. (<10% interest)</div>
+                <div class="input-tip">Mortgages, student loans, etc. (&lt;10% interest)</div>
               </div>
             </div>
           </div>
