--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,8 @@
         <button id="nav-basic" class="nav-btn active">Decision Tool</button>
         <button id="nav-profile" class="nav-btn">My Profile</button>
         <hr />
-        <div class="quick-tips">
-          <h4>Quick Tips</h4>
-          <ul>
-            <li>Enter item &amp; cost</li>
-            <li>Upload a photo for AI analysis</li>
-            <li>Or take a photo on mobile</li>
-            <li>See final decision: "Buy" or "Don't Buy"</li>
-          </ul>
+        <div>
+          
         </div>
         <hr />
         <div id="user-profile" class="user-profile"></div>
