--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,11 @@
       <nav class="sidebar-nav">
         <button id="nav-basic" class="nav-btn active">Decision Tool</button>
         <button id="nav-profile" class="nav-btn">My Profile</button>
-      
+        <hr />
+        <div>
+          
+        </div>
+        <hr />
         <div id="user-profile" class="user-profile"></div>
         <div class="nav-bottom">
           <p class="copyright">© 2025 Munger AI</p>
@@ -102,7 +106,7 @@
           <button type="submit" class="submit-btn">Should I Buy It?</button>
         </form>
 
-        <!-- Result container, now only final decision displayed -->
+        <!-- Result container -->
         <div id="basic-result"></div>
       </section>
     </main>
