--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,23 +21,9 @@
 </head>
 <body>
   <div class="container">
-
-    <!-- Sidebar (always visible; no mobile hamburger menu) -->
-    <div class="sidebar">
-      <div class="sidebar-header">
-        <h2 class="logo"><i class="fas fa-brain"></i> Munger AI</h2>
-      </div>
-      <ul>
-        <li class="active"><i class="fas fa-calculator"></i> Decision Tool</li>
-        <li><i class="fas fa-user"></i> My Profile</li>
-      </ul>
-      <div class="login-section">
-        <h3>Login</h3>
-        <input type="text" placeholder="Username" aria-label="Username" />
-        <input type="password" placeholder="Password" aria-label="Password" />
-        <button type="button" class="btn">Login</button>
-        <p class="signup">Sign Up</p>
-      </div>
+    <!-- Top Header -->
+    <div class="top-header">
+      <h2 class="logo"><i class="fas fa-brain"></i> Munger AI</h2>
     </div>
 
     <!-- Main Content -->
@@ -127,10 +113,10 @@
         <div class="image-section">
           <p>Image of the Item (Optional)</p>
           <div class="image-buttons">
-            <button type="button" id="takePhotoBtn" class="btn btn-secondary">
+            <button type="button" id="takePhotoBtn">
               <i class="fas fa-camera"></i> Take Photo
             </button>
-            <label for="imageUpload" class="upload-btn btn btn-secondary">
+            <label for="imageUpload" class="upload-btn">
               <i class="fas fa-upload"></i> Upload Image
             </label>
             <input
